trabajando en el acrhivo flor.html

--- a/flor.html
+++ b/flor.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Holi, soy Flor!</h1>
+    <h2>Y acá está Sofía! (parte 7)</h2>
     <h4>6. Trabajar en archivos diferentes (parte 2)</h4>
 </body>
 </html>
