7. Trabajar en el mismo archivo flor.html - Flor

--- a/flor.html
+++ b/flor.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Holi, soy Flor!</h1>
+    <h3>Cambio de Flor</h3>
     <h4>6. Trabajar en archivos diferentes (parte 2)</h4>
 </body>
 </html>
