Trabajando en mi nueva rama

--- a/Sofia.html
+++ b/Sofia.html
@@ -10,6 +10,7 @@
     <main>
         <h1>esto es una actividad</h1>
         <p>Una actividad</p>
+            <p>y estoy teabajando en mi rama</p>
     </main>
     
 </body>
